tests/baselines/reference/thisInConstructorParameter1.errors.txt
tests/cases/compiler/thisInConstructorParameter1.ts(3,21): error TS2333: 'this' cannot be referenced in constructor arguments.


==== tests/cases/compiler/thisInConstructorParameter1.ts (1 errors) ====
    class Foo {
        public y;
        constructor(x = this.y) { }
                        ~~~~
!!! error TS2333: 'this' cannot be referenced in constructor arguments.
    }